# rust-weather-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  creds-example.json  docker-compose.yml  sample.env
.github/workflows/: docker-build.yml  test.yml
config/: creds-example.json
proto/: weather_message.proto
src/: data_types.rs  database_utils.rs  entities.rs  errors.rs  main.rs  math.rs
src/geocoding/: entities.rs  methods.rs  mod.rs
src/weather/: entities.rs  methods.rs  mod.rs  utils.rs
