[package]
name = "rust-weather-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
actix-web = "4.3.1"
anyhow = "1.0.71"
protobuf = "3.2.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
kiddo = "2.0.2"
chrono = "0.4.24"

[build-dependencies]
protobuf-codegen = "3.2.0"
